force-app/main/default/objects/Knowledge__kav/fields/test_field_checkbox__c.field-meta.xml
<CustomField>
    <fullName>test_field_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test field checkbox</label>
    <type>Checkbox</type>
</CustomField>