force-app/main/default/objects/Knowledge__kav/fields/visible__c.field-meta.xml
<CustomField>
    <fullName>visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>visible</label>
    <type>Checkbox</type>
</CustomField>