force-app/main/default/objects/Knowledge__kav/fields/Visible_to_public__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to public</label>
    <type>Checkbox</type>
</CustomField>